third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/duplicate-key-4.stderr
TOML parse error at line 1, column 8
  |
1 | tbl = { a.b = "a_b", a.b.c = "a_b_c" }
  |        ^
dotted key `a.b` attempted to extend non-table type (string)
